# llm-tg-bot

./: .gitignore  README.md  pyproject.toml
deploy/: llm-tg-bot.service.example  llm-tg-bot.supervisor.example
llm_tg_bot/: bot.py  commands.py  config.py  main.py  providers.py  rendering.py  request_runner.py  session.py  workdirs.py
tests/: base.py  test_agy_session.py  test_claude_session.py  test_commands.py  test_gemini_session.py  test_opencode_session.py  test_providers.py  test_rendering.py  test_robustness.py  utils.py
tg_llm_bridge/: bot.py  commands.py
